--- a/FinalSQLProject.ipynb
+++ b/FinalSQLProject.ipynb
@@ -28,13 +28,13 @@
             "source": [
                 "## ✏️Tip 1: Selecting All Data from a Table 🎯\n",
                 "\n",
-                "**Query:**  \n",
+                "**Query:**\n",
                 "\n",
                 "SELECT \\* FROM dbo.Categories;\n",
                 "\n",
                 "**Explanation:**\n",
                 "\n",
-                "- The `SELECT *` statement retrieves all columns from the `Categories` table. The asterisk (`*`) means \"select all\".\n",
+                "- The SELECT( \\*) statement retrieves all columns from the `Categories` table. The asterisk (`*`) means \"select all\".\n",
                 "- `dbo.Categories` refers to the table in the database.\n",
                 "- This is one of the most basic queries and useful when you want to see all data from a table."
             ],
