--- a/FinalSQLProject.ipynb
+++ b/FinalSQLProject.ipynb
@@ -419,7 +419,7 @@
                 "\n",
                 "**Query:**\n",
                 "\n",
-                "```\n",
+                "```sql\n",
                 "SELECT   CompanyName        , ContactName FROM dbo.CustomersORDER BY CompanyName ASC;\n",
                 "```\n",
                 "\n",
@@ -514,7 +514,7 @@
                 "\n",
                 "## **Query:**\n",
                 "\n",
-                "```\n",
+                "``` sql\n",
                 "SELECT COUNT(*) AS TotalCustomers FROM dbo.Customers;\n",
                 "```\n",
                 "\n",
